// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core picture direct upload should fail should refuse a logo whose content is not an image 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "BAD_REQUEST",
    "userFriendlyMessage": "This file format is not supported.",
  },
  "message": "MIME type application/pdf is not allowed in file folder core-picture",
  "name": "UserInputError",
}
`;

exports[`Core picture direct upload should fail should refuse to bind a logo whose bytes were never uploaded 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "FILE_NOT_UPLOADED",
    "userFriendlyMessage": "The file has not been uploaded yet. Please upload it before confirming.",
  },
  "message": "File "core-picture/<fileId>.png" has not been uploaded to storage yet.",
  "name": "UserInputError",
}
`;

exports[`Core picture direct upload should fail should refuse to complete an unknown file 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "FILE_NOT_FOUND",
    "userFriendlyMessage": "File not found.",
  },
  "message": "File not found: <fileId>",
  "name": "NotFoundError",
}
`;

exports[`Core picture direct upload should fail should refuse to reserve an empty logo 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "FILE_TOO_LARGE",
    "userFriendlyMessage": "The file is empty or exceeds the maximum allowed size.",
  },
  "message": "Invalid file size 0 (max 1073741824 bytes)",
  "name": "UserInputError",
}
`;
